                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 18-04-2005 added: Support for AC3/DTS passthrough for dvdplayer and partly fixed audiostream selection from dvdmenu.
  - 17-04-2005 fixed: PAPlayer seeking was way too fast.
  - 17-04-2005 fixed: Time display in VBR files after seeking is now more accurate.
  - 17-04-2005 fixed: .Cue sheet sort order in sort by files.
  - 17-04-2005 added: Better VBR seeking for PaPlayer.
  - 17-04-2005 fixed: AudioScrobbler submission on .cue sheet items was wrong.
  - 17-04-2005 changed: Skin version hits v1.3.
  - 17-04-2005 fixed: .Cue sheet media file finding.
  - 17-04-2005 fixed: Timeoffset in PAPlayer (.cue sheets).
  - 17-04-2005 fixed: More universal remote double tap fixes.
  - 17-04-2005 fixed: Version is derived internally (top of GUIInfoManager.cpp) instead of relying on strings.xml.
  - 16-04-2005 fixed: duplicate and phantom entries in Video Actors, Genres, and Years views.
  - 16-04-2005 fixed: PAPlayer FF/RW when id3 reading is turned off. Opening to timeoffset initial code.
  - 16-04-2005 fixed: Left + Down on left thumb stick wasn't working correctly.
  - 16-04-2005 changed: SetViewPort()/RestoreViewPort() done in the control rather than by the visualisation.  Should hopefully eliminate the "flickering screen on homepage" issue.
  - 16-04-2005 fixed: Possible crash in Video database views if the listcontrol had the wrong id.
  - 16-04-2005 fixed: audioscrobbler status was only updated when restarting after settings change
  - 16-04-2005 updated: Norwegian language file (Thnx to vnm)
  - 16-04-2005 fixed: Mute dialog was not allocated, and thus not rendered.