@@ -293,31 +293,6 @@ public:
     bool m_bMyMusicSongsSortAscending;
     int m_iMyMusicSongsSortMethod;
     int m_iMyMusicSongsRootSortMethod;
-    int m_iMyMusicAlbumRootViewAsIcons;
-    int m_iMyMusicAlbumViewAsIcons;
-    bool m_bMyMusicAlbumRootSortAscending;
-    bool m_bMyMusicAlbumSortAscending;
-    int m_iMyMusicAlbumSortMethod;
-    int m_iMyMusicAlbumRootSortMethod;
-    bool m_bMyMusicAlbumShowRecent;
-    int m_iMyMusicArtistsRootViewAsIcons;
-    int m_iMyMusicArtistsAlbumsViewAsIcons;
-    int m_iMyMusicArtistsSongsViewAsIcons;
-    bool m_bMyMusicArtistsRootSortAscending;
-    bool m_bMyMusicArtistsSortAscending;
-    bool m_bMyMusicArtistsAlbumsSortAscending;
-    bool m_bMyMusicArtistsAlbumSongsSortAscending;
-    bool m_bMyMusicArtistsAllSongsSortAscending;
-    int m_iMyMusicArtistsRootSortMethod;
-    int m_iMyMusicArtistsAllSongsSortMethod;
-    int m_iMyMusicArtistsAlbumsSortMethod;
-    int m_iMyMusicArtistsAlbumsSongsSortMethod;
-    int m_iMyMusicGenresRootViewAsIcons;
-    int m_iMyMusicGenresViewAsIcons;
-    bool m_bMyMusicGenresRootSortAscending;
-    bool m_bMyMusicGenresSortAscending;
-    int m_iMyMusicGenresSortMethod;
-    int m_iMyMusicGenresRootSortMethod;
     int m_iMyMusicPlaylistViewAsIcons;
     bool m_bMyMusicPlaylistRepeat;
     bool m_bMyMusicPlaylistShuffle;
