@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+  - 18-04-2005 added: option to disable music visualisation (localized string instead of using disabled.vis)
   - 18-04-2005 added: Support for AC3/DTS passthrough for dvdplayer and partly fixed audiostream selection from dvdmenu.
   - 17-04-2005 fixed: PAPlayer seeking was way too fast.
   - 17-04-2005 fixed: Time display in VBR files after seeking is now more accurate.
